// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SimulationInterface > renders audio and waveform when connected 1`] = `
<DocumentFragment>
  <div
    class="w-full flex justify-center items-center flex-1 bg-[#1D2020] rounded-lg relative"
  >
    <div
      data-testid="room-audio"
    />
    <div
      class="flex justify-center items-center w-[90%] sm:w-[60%] lg:w-[60%] xl:w-[50%] 2xl:w-[40%] h-[70vh]"
    >
      <div
        class="relative w-full h-full flex items-center justify-center"
      >
        <div
          class="absolute rounded-full transition-all"
          style="width: 60px; height: 60px; transform: scale(3); background: rgb(87, 88, 91); transition-duration: 200ms; border: 0px solid rgba(45, 115, 186, 0.3); opacity: 0;"
        />
        <div
          class="absolute rounded-full transition-all"
          style="width: 60px; height: 60px; transform: scale(4); background: rgb(87, 88, 91); transition-duration: 200ms; border: 0px solid rgba(45, 115, 186, 0.3); opacity: 0;"
        />
      </div>
    </div>
    <span
      class="absolute bottom-4 left-4 text-white font-['IBM_Plex_Serif']"
    >
      Test Room
    </span>
  </div>
</DocumentFragment>
`;

exports[`SimulationInterface > shows connecting message when status is CONNECTING 1`] = `
<DocumentFragment>
  <div
    class="w-full flex justify-center items-center flex-1 bg-[#1D2020] rounded-lg relative"
  >
    <div
      class="flex flex-col items-center text-center font-['IBM_Plex_Serif']"
    >
      <p
        class="text-[20px] text-white"
      >
        Simulation
        <span
          class="font-medium italic"
        >
           starting...
        </span>
      </p>
      <p
        class="text-[12px] text-[#B6B5B9]"
      >
        To start the simulation, please allow us to use your microphone.
      </p>
    </div>
  </div>
</DocumentFragment>
`;
